--- a/.github/workflows/python-app-repocommit.yml
+++ b/.github/workflows/python-app-repocommit.yml
@@ -51,7 +51,7 @@ jobs:
       shell: bash
     - name: Push changes
       if: steps.commit.outputs.push == 'true'
-      uses: ad-m/github-push-action@repo-commit
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.head_ref }}
