--- a/.github/workflows/python-app-artifact-repocommit.yml
+++ b/.github/workflows/python-app-artifact-repocommit.yml
@@ -1,10 +1,8 @@
 name: Python application with artifact and repo commit
 
 on:
-  push:
+  pull_request:
     branches: [ master ]
-  # pull_request:
-  #   branches: [ master ]
 
 jobs:
   build:
